force-app/main/default/objects/Order_Follow_Up__c/Order_Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Order Follow Up</label>
    <nameField>
        <displayFormat>FU - {0000}</displayFormat>
        <label>Order Follow Up  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Follow Ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>