force-app/main/default/objects/Order_Follow_Up__c/fields/Actual_Follow_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Follow_Up_Time__c</fullName>
    <label>Actual Follow Up Time</label>
    <type>DateTime</type>
</CustomField>