force-app/main/default/objects/Order_Follow_Up__c/fields/Expected_Follow_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Follow_Up_Time__c</fullName>
    <label>Expected Follow Up Time</label>
    <type>DateTime</type>
</CustomField>