force-app/main/default/objects/Order_Follow_Up__c/fields/Follow_Up_Order__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Order__c</fullName>
    <label>Follow Up Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>