force-app/main/default/objects/Order_Follow_Up__c/fields/FollowUp_Stage__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Stage__c</fullName>
    <label>FollowUp Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>NDR</fullName>
            </value>
            <value>
                <fullName>RTO</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
            <value>
                <fullName>in transit</fullName>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>Manifest</fullName>
                <default>true</default>
                <label>Manifest</label>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>